specification of pub/secret not necessary anymore, points calc in merger since #20